Fix Boolean constructor usage.